--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
         "readline": "^1.3.0",
         "similarity": "^1.2.1",
         "syntax-error": "^1.4.0",
+        "telegram": "^2.4.6",
         "terminal-image": "^2.0.0",
         "url-regex-safe": "^2.1.0",
         "wa-sticker-formatter": "^4.0.14",
