--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "name": "wabot",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.js",
   "license": "MIT",
+  "type": "module",
+  "scripts": {
+    "start": "node src/index.js"
+  },
   "dependencies": {
     "@adiwajshing/baileys": "^4.4.0",
-    "knex": "^2.3.0",
-    "pg": "^8.8.0",
-    "qrcode-terminal": "^0.12.0"
+    "baileys-bottle": "^1.0.2",
+    "chalk": "4.1.2",
+    "moment-timezone": "^0.5.37",
+    "qrcode-terminal": "^0.12.0",
+    "sqlite3": "^5.1.2"
   }
 }
